# trex

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  LICENSING.md  NOTICE  README.md  benchmark.py  dyngui_reload_crash_handoff.md  entitlement_fix.sh  generate_extra_macros.py  summary.md
Application/: CMakeLists.txt  CMakeSettings.json  closed_loop.py  cmake_conda_osx.sh  cmake_osx.sh  cmake_python3.6.sh  conda.yml  conda_fake_root.cmake  conda_windows_environment_variable.txt  conversion.settings  convert_model.sh  default.settings  find_library.py  learn_static.py  lib_png_m1patch.diff  libzip-windows.patch  opencv_patch.patch  pretrained_tagwork.py  test_simd.cpp  trex_build_modules_osx.sh  trex_build_unix.sh  trex_build_windows.bat  trex_create_build_env.bat  trexport.py  utils.py  visual_identification_network_torch.py  visual_recognition_torch.py
Application/Tests/: CMakeLists.txt  bench_dyngui_parser.cpp  commons_module_inventory.json  generate_commons_module_surface.py  generate_sahi_references.py  generate_tracker_module_surface.py  run.bash  run_macos.bash  run_ubuntu.bash  run_unix.bash  run_windows.bash  run_windows.bat  sample_detections.csv  test_commandline.cpp  test_commons_modules.cpp  test_dispatcher.cpp  test_dyngui.cpp  test_main.cpp  test_matching.cpp  test_optionslist.cpp  test_outlines.cpp  test_patharray.cpp  test_pixels.cpp  test_sam3interactivesession.cpp  test_sam3promptpayload.cpp  test_segmenter.cpp  test_strings.cpp  test_threadpool.cpp  test_tiling.cpp  test_trex_modules.cpp  tracker_module_inventory.json  wslpath
Application/cmake/: FindBaslerPylon.cmake  FindGLFW.cmake  Findzip.cmake  GetGitRevisionDescription.cmake  Info.plist  MacOSXBundleInfo.plist.in
Application/libzip_windows/: zip_source_winzip_aes_encode.c
Application/src/: CMakeLists.txt  GitSHA1.cpp.in  GitSHA1.h
Application/src/ProcessedVideo/: CMakeLists.txt  pv.cpp  pv.h
Application/src/ProcessedVideo/lzo/: CMakeLists.txt
Application/src/commons/: CMakeLists.txt  FindBaslerPylon.cmake  JSON.h  commons.pc.h  types.cpp
Application/src/commons/CMakeModules/: FindBaslerPylon.cmake  FindLibMicroHttpd.cmake
Application/src/commons/common/: CMakeLists.txt  commons.pc.h  types.h
Application/src/commons/cpputils/: CMakeLists.txt  hashutils.h  miscutils.h  stringutils.h
Application/src/commons/file/: CSVExport.h  DataFormat.cpp  DataFormat.h  Export.cpp  Export.h
Application/src/commons/gui/: CrossPlatform.h  DrawBase.cpp  DrawBase.h  DrawCVBase.h  DrawObject.cpp  DrawObject.h  DrawSFBase.cpp  Event.cpp  FileChooser.cpp  Graph.cpp  Graph.h  GuiTypes.cpp  HttpClient.cpp  IMGUIBase.h  SFLoop.cpp  Section.cpp  Section.h  Transform.cpp  colors.h
Application/src/commons/http/: httpd.cpp  httpd.h
Application/src/commons/misc/: Base64.cpp  Base64.h  Blob.cpp  CropOffsets.h  GlobalSettings.cpp  Grid.cpp  Image.cpp  Median.h  MetaObject.h  PVBlob.h  PixelTree.h  ProximityGrid.cpp  ProximityGrid.h  SpriteMap.cpp  ThreadPool.h  curve_discussion.cpp  default_settings.h  defines.h  detail.cpp  math.h  ocl.cpp  ocl.h  string_view.cpp  string_view.h
Application/src/commons/processing/: CPULabeling.cpp  LuminanceGrid.cpp  PadImage.cpp
Application/src/commons/video/: GenericVideo.h  VideoSource.h
Application/src/fonts/: OTF-NotoSansSymbols2.txt  OTF-PTMono.txt
Application/src/grabber/: CMakeLists.txt  CropWindow.cpp  CropWindow.h  ImageThreads.cpp  ImageThreads.h  Info.plist  default_config.cpp  default_config.h  gif.h  gpuImage.cpp  gpuImage.h  grabber.cpp  grabber.h  gui.cpp  gui.h  main.cpp  pvconvert.cpp  pvinfo.cpp  pvinfo_merge.cpp  pvinfo_merge.h  tgrabs.cpp  tomp4.cpp  tomp4.h
Application/src/grabber/gfx/: GrabberIcon.icns
Application/src/grabber/misc/: BaslerPylonBridge.cpp  BaslerPylonBridgeAPI.h  BaslerRuntimeLoader.cpp  BaslerRuntimeLoader.h  CMakeLists.txt  Camera.cpp  Camera.h  InteractiveCamera.cpp  InteractiveCamera.h  PylonCamera.cpp  PylonCamera.h  TestCamera.cpp  TestCamera.h  Webcam.cpp  Webcam.h  default_config.cpp  default_config.h
Application/src/html/: common.js  format.css  grabber.html  gui.js  settings.js  tracker.html
Application/src/tools/: CMakeLists.txt  corpus.txt  settings_docs.cpp  term_metrics.cpp
Application/src/tracker/: AlterInfo.plist  Alterface.cpp  Alterface.h  CMakeLists.txt  DrawDataset.cpp  DrawMenu.cpp  HttpGui.cpp  HttpGui.h  Scene.cpp  Scene.h  TrackerSources.cmake  VideoOpener.cpp  VideoOpener.h  VideoOpenerScene.cpp  VideoOpenerScene.h  alter.cpp  alter_layout.json  annotation_layout.json  audit_tracker_layers.py  calibrate_layout.json  choose_settings_layout.json  compilation_cleanup.md  export_options_layout.json  faq.json  gui.cpp  gui.h  main.cpp  network.cpp  program.cpp  properties.cpp  pvinfo.cpp  pvinfo_merge.cpp  pvinfo_merge.h  report_tracker_dependencies.py  settings_layout.json  tracking_layout.json  tracking_settings_layout.json  trex.cpp  trexa.cpp  trexa.rc  (+1 more)
Application/src/tracker/core/: AbstractVideoSource.cpp  AbstractVideoSource.h  BackgroundTask.cpp  BackgroundTask.h  BaslerVideoSource.cpp  BaslerVideoSource.h  BlurryVideoLoop.cpp  BlurryVideoLoop.h  Border.cpp  DetectionTypes.cpp  DetectionTypes.h  FOI.h  GPURecognitionTypes.cpp  GPURecognitionTypes.h  IdentifiedTag.cpp  IdentifiedTag.h  Identity.cpp  Identity.h  PVVideoSource.cpp  PVVideoSource.h  PrecomuptedDetection.cpp  PrecomuptedDetection.h  PythonWrapper.h  SettingsInitializer.cpp  SettingsInitializer.h  SettingsPaths.cpp  SettingsPaths.h  SizeFilters.h  SoftException.cpp  TaskPipeline.cpp  TaskPipeline.h  TileBuffers.cpp  TileBuffers.h  TileImage.cpp  TileImage.h  TimingStatsCollector.h  TrackingSettings.cpp  TrackingSettings.h  VideoInfo.h  VideoVideoSource.cpp  (+10 more)
Application/src/tracker/data/: CategorizeDatastore.cpp  FilterCache.cpp  FilterCache.h  MotionRecord.cpp  MotionRecord.h  Results.cpp  Results.h  Stuffs.h  TrackletInformation.h  TrainingData.cpp  TrainingData.h
Application/src/tracker/detect/: BackgroundSubtraction.cpp  BackgroundSubtraction.h  Detection.cpp  Detection.h  NoDetection.cpp  NoDetection.h  OverlayedVideo.h
(+858 files in other folders)
